--- a/src/Components/styles/graph.css
+++ b/src/Components/styles/graph.css
@@ -16,8 +16,9 @@
 }
 
 .graph__select{
-    margin: 1rem;
+    margin-left: 1rem;
     width: 3%;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 485px) {
