--- a/src/Components/styles/login.css
+++ b/src/Components/styles/login.css
@@ -18,7 +18,7 @@ html, body {
     padding: 2rem;
     border-radius: 1rem;
     margin: 1rem;
-    height: 300px;
+    box-sizing: content-box;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
@@ -72,4 +72,22 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
     background-color: #0056b3;
+}
+
+.login__p{
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.login__link{
+  text-decoration: none;
+  color: white;
+}
+
+.login__span{
+  color: rgb(101, 101, 212);
+}
+
+.login__span:hover{
+  color: pink;
 }
