--- a/src/Components/styles/Admin.css
+++ b/src/Components/styles/Admin.css
@@ -5,3 +5,10 @@
     flex-direction: column;
     margin-top: 2rem;
 }
+
+.searchbar__container{
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+    margin-top: 30px;
+}
