--- a/src/Components/styles/ChangeTicket.css
+++ b/src/Components/styles/ChangeTicket.css
@@ -1,6 +1,6 @@
 .ticket{
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     align-items: center;
     margin: 1rem;
     background-color: whitesmoke;
@@ -8,6 +8,7 @@
     width: 75%;
     font-size: 0.8em;;
     border-radius: 0.8rem;
+    padding: 0 0.5rem;
 }
 
 .ticket:hover{
@@ -17,10 +18,19 @@
 .ticket__details{
     font-family: monospace;
     color: black;
+    margin-right: auto;
+}
+
+.ticket__p{
+    padding-top: 0;
+    margin-top: 0;
+    padding-left: 20px;
+    width: 70%;
 }
 
 .ticket__select{
-    width: 30%;
+    width: 100px;
+    min-width: 100px;
     height: 60px;
     border-radius: 10px;
     padding: 10px;
@@ -39,6 +49,20 @@
 
     .ticket__select{
         font-size: 1.2em;
-        width: 20%;
+        width: 100px;
+    }
+}
+
+@media screen and (min-width: 700px) {
+    .ticket{
+        font-size: 1em;
+    }
+
+    .ticket__select{
+        font-size: 1.2em;
+        margin-left: auto;
+        width: 100px;
+        box-sizing: content-box;
+        padding: 1rem;
     }
 }
