Debugged CSS of Tickets

--- a/src/Components/styles/Searchbar.css
+++ b/src/Components/styles/Searchbar.css
@@ -24,7 +24,7 @@
     cursor: pointer;
 }
 
-.search__button-input:hover{
+.search__button-input:hover, .search__button-input:focus{
     background-color: rgb(209, 207, 207);
 }
 
