--- a/src/Components/styles/ChangeTicket.css
+++ b/src/Components/styles/ChangeTicket.css
@@ -40,6 +40,12 @@
     border: 2px solid black;
     background-color: rgb(236, 233, 233);
     color: black;
+    flex-shrink: 0;
+}
+
+.ticket__select:hover{
+    background-color: whitesmoke;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 580px) {
@@ -48,8 +54,8 @@
     }
 
     .ticket__select{
-        font-size: 1.2em;
-        width: 100px;
+        font-size: 1em;
+        width: 120px;
     }
 }
 
@@ -61,8 +67,7 @@
     .ticket__select{
         font-size: 1.2em;
         margin-left: auto;
-        width: 100px;
+        width: 200px;
         box-sizing: content-box;
-        padding: 1rem;
     }
 }
