--- a/src/Components/styles/Ticket.css
+++ b/src/Components/styles/Ticket.css
@@ -11,6 +11,20 @@
     flex-shrink: 0;
 }
 
+.ticket__title{
+    margin-left: 10px;
+}
+
+.ticket__id{
+    margin-left: 10px;
+    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+} 
+
+.ticket__p{
+    line-height: 1.5;
+    /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+}
+
 .ticket__state{
     color: rgb(82, 82, 250);
     font-size: 10px;
