--- a/src/Components/styles/ChangeTicket.css
+++ b/src/Components/styles/ChangeTicket.css
@@ -19,6 +19,7 @@
     font-family: monospace;
     color: black;
     margin-right: auto;
+    font-size: 8px;
 }
 
 .ticket__p{
@@ -29,8 +30,8 @@
 }
 
 .ticket__select{
-    width: 100px;
-    min-width: 100px;
+    width: 60px;
+    min-width:50px;
     height: 60px;
     border-radius: 10px;
     padding: 10px;
@@ -48,7 +49,22 @@
     cursor: pointer;
 }
 
+@media screen and (min-width:400px) {
+    .ticket__select{
+        width: 100px;
+        min-width: 100px;
+    }
+
+    .ticket__details{
+        font-size: 10px;
+    }
+}
+
 @media screen and (min-width: 580px) {
+    .ticket__details{
+        font-size: 12px;
+    }
+
     .ticket{
         font-size: 1em;
     }
@@ -67,7 +83,14 @@
     .ticket__select{
         font-size: 1.2em;
         margin-left: auto;
-        width: 200px;
+        width: 150px;
+        margin-right: 20px;
         box-sizing: content-box;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .ticket__select{
+        width: 180px;
     }
 }
