--- a/src/Components/styles/ChangeTicket.css
+++ b/src/Components/styles/ChangeTicket.css
@@ -5,7 +5,7 @@
     margin: 1rem;
     background-color: whitesmoke;
     border: 2px solid gray;
-    width: 75%;
+    width: 90%;
     font-size: 0.8em;;
     border-radius: 0.8rem;
     padding: 0 0.5rem;
@@ -20,6 +20,7 @@
     color: black;
     margin-right: auto;
     font-size: 8px;
+    width: 50%;
 }
 
 .ticket__p{
@@ -42,6 +43,8 @@
     background-color: rgb(236, 233, 233);
     color: black;
     flex-shrink: 0;
+    margin: 10px;
+
 }
 
 .ticket__select:hover{
