--- a/src/Components/styles/Ticket.css
+++ b/src/Components/styles/Ticket.css
@@ -1,34 +1,39 @@
 .ticket__status{
     display: inline;
-    border: 2px solid rgb(57, 57, 57);
+    /* border: 2px solid rgb(57, 57, 57); */
+    box-shadow: 1px 1px 10px rgb(224, 222, 222);
     padding: 0.2rem;
     border-radius: 0.3rem;
     word-spacing: 0.5rem;
     width: 80px;
     text-align: center;
-    margin-right: 1.5rem;
-    margin-left: auto;
+    width: 40%;
     flex-shrink: 0;
 }
 
 .ticket__title{
     margin-left: 10px;
     margin-top: 0;
-    max-width: 500px;
+    width: 100%;
     font-family: cursive;
+    word-wrap: break-word;     
+    overflow-wrap: break-word;
+    font-weight: bolder;
 }
 
 .ticket__title-span{
-    font-size: 30px;
-    font-weight: 500;
-    margin-left: 10px;
+    font-size: 20px;
+    font-weight: 1000;
+    margin-left: 0px;
     font-family: sans-serif;
 }
 
 .ticket__id{
     margin-left: 10px;
-    width: 50%;
-    white-space: nowrap;
+    width: 100%;
+    font-weight: 400;
+    word-wrap: break-word;     
+    overflow-wrap: break-word;
     margin-right: 20px;
     /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 } 
@@ -58,6 +63,7 @@
 }
 
 @media screen and (min-width: 450px) {
+
     .ticket__status{
         width: 120px;
     }
@@ -68,12 +74,23 @@
 }
 
 @media screen and (min-width: 550px) {
+    .ticket__title{
+        font-size: 30px;
+    }
+
+    .ticket__title-span{
+        font-size: 23px;
+        font-weight: 1000;
+        /* margin-left: 10px; */
+        font-family: sans-serif;
+    }
+
     .ticket__header{
         width: 250px;
     }
 
     .ticket__state{
-        font-size: large;
+        font-size: 1rem;
     }
 
     .ticket__status{
@@ -87,7 +104,7 @@
     }
 
     .ticket__state{
-        font-size: medium;
+        font-size: 0.9rem;
         display: inline;
     }
 
@@ -97,18 +114,27 @@
         width: 150px;
         white-space: nowrap;
         margin-left: auto ;
+        font-size: 1.2rem;
     }
 }
 
 @media screen and (min-width: 880px) {
     .ticket__state{
-        font-size: 25px;
+        font-size: 1.18rem;
     }
 
     .ticket__status{
         word-spacing: 1rem;
         margin-left: auto;
-        width: 200px;
-        font-size: 30px;
+        margin-right: 10px;
+        width: 30%;
+        text-align: center;
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width:980px) {
+    .ticket__state{
+        font-size: 1.4rem;
     }
 }
