--- a/src/Components/styles/login.css
+++ b/src/Components/styles/login.css
@@ -4,6 +4,11 @@ html, body {
   height: 100%;
 }
 
+.err{
+  text-align: center;
+  color: yellow;
+}
+
 .login{
     height: 100vh;
     background-image: linear-gradient(to top right, black 0%, gray 70%, white);
