--- a/src/Components/styles/home.css
+++ b/src/Components/styles/home.css
@@ -5,12 +5,16 @@
     flex-wrap: wrap;
 }
 
+.open, .inprogress, .closed{
+    display: contents;
+}
+
 .card__container>:nth-child(4){
     display:none;
 }
 
 @media screen and  (min-width: 1000px){
     .card__container>:nth-child(4){
-        display:inline;
+        display:contents;
     }
 }
